<resources>
    <string name="app_name">Android Fitness</string>
    <string name="dailyy">Daily</string>
    <string name="workout">Workout</string>
    <string name="start_today">Start today!</string>
    <string name="register_new_account">REGISTER NEW ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="new_user">New User</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calculate">Calculate!</string>
    <string name="workout_image_description">workout_description\n</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="abs">Abs</string>
    <string name="legs">Legs</string>
    <string name="calves">Calves</string>
    <string name="shoulders">Shoulders</string>
    <string name="triceps">Triceps</string>
    <string name="biceps">Biceps</string>
    <string name="chest">Chest</string>
    <string name="workouts">Workouts</string>
    <string name="search">Search</string>
    <string name="exercise_image_desc" />
    <string name="exercise_details" />
    <string name="start_workout" />
    <string name="reps" />
    <string name="exercise_image" />
    <string name="sets" />
    <string name="watch_tutorial" />
    <string name="weight" />
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="workout_lists" />
    <string name="select_image">Select Image (JPG/PNG)</string>
    <string name="exercise_added">Exercise added successfully!</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="logout">Logout</string>
</resources>